--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Where Great Traders Are Born" />
     <link
-      href="../src/css/style.css"
+      href="src/css/style.css"
       rel="stylesheet" />
     <meta
       name="viewport"
@@ -15,7 +15,7 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="../src/img/logo_white.webp" />
+      href="src/img/logo_white.webp" />
   </head>
   <body>
     <div class="container-kk">
