--- a/index.html
+++ b/index.html
@@ -38,17 +38,24 @@
           <div class="desc">
             Access expert insights, premium signals, and a thriving community.
           </div>
-          <div class="btn-container">
+          <div class="btn-container p-20">
             <a
               href="#"
-              class="btn-main"
-              ><span>Unlock Access</span
-              ><ion-icon name="arrow-forward"></ion-icon></a
-            ><a
-              href="#"
               id="register"
-              class="btn-sec"
-              ><span>Register</span><ion-icon name="heart"></ion-icon
+              class="btn-main fw"
+              ><span>Register with Trusted Brokers</span
+              ><ion-icon name="arrow-forward"></ion-icon
+            ></a>
+            <a
+              href="https://t.me/zerofloatclub"
+              class="btn-sec fw"
+              ><span>Get Free Access</span
+              ><ion-icon name="lock-open-outline"></ion-icon></a
+            ><a
+              href="https://t.me/+ysknc3ZpPAhlMTE1"
+              class="btn-sec fw"
+              ><span>Join Our Community Group</span
+              ><ion-icon name="heart"></ion-icon
             ></a>
           </div>
         </div>
@@ -57,20 +64,53 @@
           id="second"
           style="display: none">
           <div class="mainTitle-2">
-            Register at <span class="gradient">Trusted Brokers</span>
+            Register with <span class="gradient">Trusted Brokers</span>
           </div>
           <a
-            href="#"
+            href="https://register.hfm.com/int/en/new-live-account/?refid=30444913"
+            class="btn-link"
+            ><div class="two">
+              <img src="src/img/hfm.svg" /><span>HFM</span>
+            </div>
+            <ion-icon name="arrow-forward-outline"></ion-icon
+          ></a>
+          <a
+            href="https://one.justmarkets.link/a/bd85r07dmn/ms/registration/trader"
+            class="btn-link"
+            ><div class="two">
+              <img src="src/img/jm.svg" /><span>JustMarkets</span>
+            </div>
+            <ion-icon name="arrow-forward-outline"></ion-icon
+          ></a>
+          <a
+            href="http://octa.click/b7dXdqwjotz"
+            class="btn-link"
+            ><div class="two">
+              <img src="src/img/octa.svg" /><span>Octa</span>
+            </div>
+            <ion-icon name="arrow-forward-outline"></ion-icon
+          ></a>
+          <a
+            href="https://clicks.pipaffiliates.com/c?c=815478&l=en&p=1"
             class="btn-link"
             ><div class="two">
               <img src="src/img/xm.svg" /><span>XM Broker</span>
             </div>
-            <ion-icon name="arrow-forward-outline"></ion-icon></a
-          ><a
-            href="#"
+            <ion-icon name="arrow-forward-outline"></ion-icon
+          ></a>
+          <a
+            href="https://gmi-ma.biz/account/register?token=Njk5ZWY4MDczOTYwZDE0MTNjMmYzMzc3ZTdlNTQ2MmM%3D"
             class="btn-link"
             ><div class="two">
-              <img src="src/img/jm.svg" /><span>JustMarkets</span>
+              <img src="src/img/gmi.svg" /><span>GMI Markets</span>
+            </div>
+            <ion-icon name="arrow-forward-outline"></ion-icon
+          ></a>
+          <a
+            href="https://mtrading.com/registration?ref_id=1088448"
+            class="btn-link"
+            ><div class="two">
+              <img src="src/img/mtrading.svg" /><span>MTrading</span>
             </div>
             <ion-icon name="arrow-forward-outline"></ion-icon
           ></a>
@@ -88,10 +128,11 @@
     <!-- Scripts -->
     <script
       type="module"
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+      src="https://cdn.jsdelivr.net/npm/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script
       nomodule
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+      src="https://cdn.jsdelivr.net/npm/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <script>
